# Sena

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  __init__.py  build-installer.bat  build-standalone.bat  launcher.js  pyproject.toml  requirements-dev.txt  requirements.txt  start-dev.bat
.github/: FIXES.md  PHASES.md  RULES.md  WORKSPACE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
api/: deps.py
api/models/: requests.py
api/routes/: __init__.py  chat.py  extensions.py
api/websocket/: manager.py
config/: settings.yaml
core/: sena.py
database/: connection.py
database/models/: __init__.py  conversation.py
database/repositories/: base.py  extension_repo.py  memory_repo.py  telemetry_repo.py
extensions/: manager.py
extensions/tests/: test_manager.py
llm/models/: model_registry.py
llm/prompts/: intent_prompts.py
memory/: long_term.py  manager.py  mem0_client.py  retrieval.py  short_term.py
src/: .gitignore  main.py
src/api/: __init__.py  deps.py  server.py
src/api/models/: __init__.py  responses.py
src/api/routes/: __init__.py  chat.py  debug.py  extensions.py  logs.py  memory.py  personality.py  processing.py  settings.py  telemetry.py
src/api/websocket/: __init__.py  manager.py
src/config/: __init__.py  settings.py  settings.yaml
src/core/: __init__.py  bootstrapper.py  constants.py  error_handler.py  exceptions.py  runtime.py  sena.py  telemetry.py
src/data/benchmarks/: .gitkeep
src/data/logs/: .gitkeep
src/data/logs/sessions/: .gitkeep
src/data/memory/: .gitkeep
src/data/memory/chroma/: .gitkeep
src/database/: __init__.py  connection.py
src/database/models/: benchmark.py  extension.py  log.py  memory.py  telemetry.py
src/database/repositories/: __init__.py  conversation_repo.py  personality_repo.py
src/extensions/: __init__.py
src/extensions/core/: __init__.py  file_search.py  web_search.py
src/extensions/tests/: conftest.py  test_file_search.py  test_web_search.py
src/extensions/user/: .gitkeep  __init__.py
src/llm/: __init__.py  manager.py  ollama_manager.py  router.py
src/llm/models/: __init__.py  base.py  model_registry.py  ollama_client.py
src/llm/prompts/: __init__.py  intent_prompts.py  personality_prompts.py  reasoning_prompts.py  system_prompts.py
src/memory/: __init__.py  embeddings.py  long_term.py  manager.py  mem0_client.py  personality.py  retrieval.py  short_term.py
src/ui/: __init__.py
src/ui/behind-the-sena/: .gitignore  README.md  electron-builder.json  index.html  package-lock.json  package.json  start-dev.bat  tailwind.config.cjs  tsconfig.electron.json  tsconfig.json  tsconfig.main.json  vite.config.ts
src/ui/behind-the-sena/dist-electron/: main.js  preload.js
src/ui/behind-the-sena/electron/: main.ts  preload.ts
src/ui/behind-the-sena/src/: App.tsx  index.css
src/ui/cli/: __init__.py  interface.py
src/utils/: __init__.py  logger.py
ui/behind-the-sena/: .gitignore  package.json  tsconfig.json
ui/behind-the-sena/src/: App.tsx  global.d.ts
ui/behind-the-sena/src/components/: FloatingWindow.tsx  HotbarButton.tsx  LogsTab.tsx  MemoryCard.tsx  MemoryTab.tsx  SettingsTab.tsx  TabWindow.tsx  index.ts
ui/behind-the-sena/src/styles/: tailwind.css
ui/behind-the-sena/src/tabs/: ChatContent.tsx  (+2 more)
ui/cli/: commands.py
(+49 files in other folders)
